@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2908440 by claudiu.cristea: Fixed UnsavedIndexConfiguration documentation.
 - #2899678 by drunken monkey, Graber, borisson_: Added support for VBO.
 - #2909153 by drunken monkey, borisson_: Fixed fatal error for test fails under
   certain conditions.
